# sgd_parallelization

./: .gitignore  CMakeLists.txt  Makefile  README.md  readme.aux  readme.out  readme.tex  readme.toc
include/: dataset.hpp  io.hpp  metrics.hpp  model.hpp  schedules.hpp  sgd.hpp  system_info.hpp  train.hpp  types.hpp  utils.hpp  workloads.hpp
report/: report.md  results_summary.md
scripts/: generate_report_summary.py  plot_results.py  run_benchmarks.py
src/: dataset.cpp  io.cpp  main.cpp  metrics.cpp  model.cpp  schedules.cpp  sgd.cpp  system_info.cpp  train_logistic.cpp  train_mf.cpp  types.cpp  utils.cpp  workloads.cpp
tests/: check_csv_schema.py  tests.cpp
